--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,18 +2,17 @@
 @using System.Net.Http.Json
 @using TamboliyaLibrary.DAL
 @inject IJSRuntime JSRuntime
+@inject NavigationManager NavManager;
 
-<div style="width: 990px; height:500px;background-color:blue;" id="baseImage"></div>
+<div style="margin: auto; width: 990px; height:500px;background-image: url(@(NavManager.Uri + pathToImage));" id="baseImage"></div>
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Нова гра</PageTitle>
 
-<h1>Hello, gamer!</h1>
-
-<input type="text" @bind-value="question" />
-<button type="button" class="btn btn-success" onclick="@(async () => await CreateNewGame())">Start new game</button>
 
 <div class="alert alert-warning" role="alert">
-    Before authentication will function correctly, you must configure your provider details in <code>Program.cs</code>
+    <input type="text" @bind-value="question" />
+    <button type="button" class="btn btn-success" onclick="@(async () => await CreateNewGame())">Start new game</button>
+
 </div>
 
 @if (GameId > 0)
@@ -28,7 +27,7 @@
 @code {
     public int? GameId { get; set; }
     private string question;
-    private string pathToImage = null!;
+    private string pathToImage = "images/Oracul.jpg";
 
     protected override async Task OnInitializedAsync()
     {
@@ -52,7 +51,7 @@
             pathToImage = gameOracle!.PathToImage;
             if (pathToImage != null)
             {
-                await MoveFigure(new GamePosition(100, 200, pathToImage));
+                await MoveFigure(new GamePosition(gameOracle.Coordinates.x - 15, gameOracle.Coordinates.y - 29, pathToImage));
             }
         }
     }
