--- a/Shared/LogOfGame.razor
+++ b/Shared/LogOfGame.razor
@@ -11,7 +11,7 @@ else
     <table class="table">
         <thead>
             <tr>
-                <th>Message</th>
+                <th>Log of game</th>
             </tr>
         </thead>
         <tbody>
