--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -11,12 +11,12 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-plus" aria-hidden="true"></span> Нова гра
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="history">
+                <span class="oi oi-home" aria-hidden="true"></span> Історія
             </NavLink>
         </div>
         <div class="nav-item px-3">
