--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -9,7 +9,6 @@
 
 <PageTitle>Нова гра</PageTitle>
 
-
 <div class="">
     <p>@messageForEndGame</p>
     @if (GameId == null)
@@ -59,16 +58,23 @@
     }
     else
     {
-        <table class="table">
-            <tbody>
-                @foreach (var line in logLines.Messages)
-                {
-                    <tr>
-                        <td>@line</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+        <div style="display:flex;">
+            <div style="width:50%; max-height:600px; overflow-y:scroll;">
+                <Chat RoomName="@GameId.Value"></Chat>
+            </div>
+            <div style="width:50%; display:flex; max-height:600px; overflow-y:scroll;">
+                <table class="table">
+                    <tbody>
+                        @foreach (var line in logLines.Messages)
+                        {
+                            <tr>
+                                <td>@line</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
     }
 }
 
