--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,5 +9,10 @@
 @using Microsoft.JSInterop
 @using Tamboliya
 @using Tamboliya.Shared
+@using Tamboliya.Helpers
+@using Tamboliya.Services
 @using TamboliyaLibrary.DAL
 @inject HttpClient Http
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.AspNetCore.Authorization
+@using System.Web
