--- a/App.razor
+++ b/App.razor
@@ -1,19 +1,9 @@
 ﻿<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-                <NotAuthorized>
-                    @if (context.User.Identity?.IsAuthenticated != true)
-                    {
-                        <RedirectToLogin />
-                    }
-                    else
-                    {
-                        <p role="alert">You are not authorized to access this resource.</p>
-                    }
-                </NotAuthorized>
-            </AuthorizeRouteView>
-            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+            <AppRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+               
+            </AppRouteView>
         </Found>
         <NotFound>
             <PageTitle>Not found</PageTitle>
