--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,11 +1,14 @@
-﻿@page "/"
+﻿@page "/newGame"
 @using System.Net.Http.Json
 @using TamboliyaLibrary.DAL
 @using TamboliyaLibrary.Models
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavManager;
 
-<div style="margin: auto;width: 990px; height:500px;background-image: url(@(NavManager.Uri + pathToImage));" id="baseImage"></div>
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
+<div style="margin: auto;width: 990px; height:500px;background-image: url(@(pathToImage));" id="baseImage"></div>
 
 <PageTitle>Нова гра</PageTitle>
 
