--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,17 +13,15 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Головна
+            </NavLink>
+            <NavLink class="nav-link" href="newGame">
                 <span class="oi oi-plus" aria-hidden="true"></span> Нова гра
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="history">
                 <span class="oi oi-home" aria-hidden="true"></span> Історія
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
     </nav>
