--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -109,7 +109,17 @@
     {
         if (!String.IsNullOrEmpty(question))
         {
-            var gameOracle = await Http.GetFromJsonAsync<OracleDTO>($"api/Game/new?question={question}");
+            OracleDTO? gameOracle = null;
+            try
+            {
+                gameOracle = await Http.GetFromJsonAsync<OracleDTO>($"api/Game/new?question={question}");
+
+            }
+            catch (Exception ex)
+            {
+                Console.WriteLine(ex);
+            }
+            
             GameId = gameOracle!.GameId;
             pathToImage = gameOracle!.PathToImage;
             RegionOnMap = gameOracle!.RegionOnMap;
