--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,6 +4,8 @@
 @using TamboliyaLibrary.Models
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavManager;
+@inject IHttpClientFactory ClientFactory
+
 
 @using Microsoft.AspNetCore.Authorization
 @attribute [Authorize]
@@ -63,12 +65,12 @@
     {
         <div style="display:flex;">
             <div style="width:50%; max-height:600px; overflow-y:scroll;">
-                <Chat RoomName="@GameId.Value" @ref="chat"></Chat>
+                <Chat RoomName="@GameId.Value" @ref="@chat" />
             </div>
             <div style="width:50%; display:flex; max-height:600px; overflow-y:scroll;">
                 <table class="table">
                     <tbody>
-                        @foreach (var line in logLines?.Messages)
+                        @foreach (var line in logLines?.Messages!)
                         {
                             <tr>
                                 <td>@line</td>
@@ -96,10 +98,12 @@
     private int? PositionNumber { get; set; }
     private List<ActualPositionOnMap> ActualPositionsForSelect { get; set; } = new();
     public int SelectedIdForNextStepToEmbodiment { get; set; }
-    private Chat chat = new();
+    private Chat? chat = new();
+    private readonly HttpClient _httpClient = null!;
 
     protected override async Task OnInitializedAsync()
     {
+        var _httpClient = ClientFactory.CreateClient("Tamboliya.ServerAPI");
         await base.OnInitializedAsync();
     }
 
@@ -112,7 +116,7 @@
             OracleDTO? gameOracle = null;
             try
             {
-                gameOracle = await Http.GetFromJsonAsync<OracleDTO>($"api/Game/new?question={question}");
+                gameOracle = await _httpClient.GetFromJsonAsync<OracleDTO>($"api/Game/new?question={question}");
 
             }
             catch (Exception ex)
@@ -141,7 +145,7 @@
                 GameId = GameId!.Value,
                 ActionType = ActionType.RandomAction
             };
-        var response = await Http.PostAsJsonAsync<MoveModel>($"api/Game/move", model);
+        var response = await _httpClient.PostAsJsonAsync<MoveModel>($"api/Game/move", model);
 
         if (response.IsSuccessStatusCode)
         {
@@ -178,7 +182,7 @@
         SelectedIdForNextStepToEmbodiment = 0;
         ActualPositionsForSelect = new();
 
-        HttpResponseMessage response = await Http.PostAsJsonAsync<MoveModel>($"api/Game/move", model);
+        HttpResponseMessage response = await _httpClient.PostAsJsonAsync<MoveModel>($"api/Game/move", model);
         if (response.IsSuccessStatusCode)
         {
             var result = await response.Content.ReadFromJsonAsync<GameDTO>();
@@ -205,7 +209,7 @@
                 ActionType = ActionType.NewStep
             };
 
-        HttpResponseMessage response = await Http.PostAsJsonAsync<MoveModel>($"api/Game/move", model);
+        HttpResponseMessage response = await _httpClient.PostAsJsonAsync<MoveModel>($"api/Game/move", model);
         if (response.IsSuccessStatusCode)
         {
             var result = await response.Content.ReadFromJsonAsync<GameDTO>();
@@ -243,16 +247,16 @@
     {
         if (GameId.HasValue && GameId > 0)
         {
-            logLines = await Http.GetFromJsonAsync<GameLogDTO>($"api/Game/log/{GameId}") ?? new();
+            logLines = await _httpClient.GetFromJsonAsync<GameLogDTO>($"api/Game/log/{GameId}") ?? new();
         }
     }
 
     private async Task EndTheGame()
     {
-        var response = await Http.PostAsJsonAsync<int>($"api/Game/finish", GameId!.Value);
+        var response = await _httpClient.PostAsJsonAsync<int>($"api/Game/finish", GameId!.Value);
         if (response.IsSuccessStatusCode)
         {
-            await chat.SaveChatLog();
+            await chat!.SaveChatLog();
             var result = await response.Content.ReadFromJsonAsync<string>();
             messageForEndGame = result!;
             gameFinished = true;
