--- a/_Imports.razor
+++ b/_Imports.razor
@@ -15,3 +15,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Authorization
 @using System.Web
+@using Tamboliya.Services
+@using System.Net.Http.Headers
