--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,4 +1,14 @@
-﻿<h3>Home</h3>
+﻿@page "/"
+
+<h3>Home</h3>
+
+<AuthorizeView Roles="Admin">
+    <p>You can only see this if you satisfy the IsUser policy.</p>
+</AuthorizeView>
+
+<AuthorizeView Roles="Admin">
+    <p>You can only see this if you satisfy the IsAdmin policy.</p>
+</AuthorizeView>
 
 @code {
 
