--- a/Shared/LoginDisplay.razor
+++ b/Shared/LoginDisplay.razor
@@ -4,17 +4,18 @@
 
 <AuthorizeView>
     <Authorized>
-        <a href="authentication/profile">Hello, @context.User.Identity?.Name!</a>
+        Hello, @context.User.Identity?.Name!
         <button class="nav-link btn btn-link" @onclick="BeginLogOut">Log out</button>
     </Authorized>
     <NotAuthorized>
-        <a href="authentication/login">Log in</a>
+        <a href="Register">Register</a>
+        <a href="Login">Log in</a>
     </NotAuthorized>
 </AuthorizeView>
 
 @code {
     private void BeginLogOut()
     {
-        Navigation.NavigateToLogout("authentication/logout");
+        Navigation.NavigateToLogout("LogOut");
     }
 }
