--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,19 +1,20 @@
-﻿@using System.Net.Http
-@using System.Net.Http.Json
-@using Microsoft.AspNetCore.Components.Authorization
+﻿@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Tamboliya
-@using Tamboliya.Shared
-@using Tamboliya.Helpers
-@using TamboliyaLibrary.DAL
-@inject HttpClient Http
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Authorization
 @using System.Web
-@using Tamboliya.Services
+@using System.Net.Http
+@using System.Net.Http.Json
 @using System.Net.Http.Headers
+@using Tamboliya
+@using Tamboliya.Shared
+@using Tamboliya.Helpers
+@using Tamboliya.Services
+@using TamboliyaLibrary.Models;
+@using TamboliyaLibrary.DAL
+@inject HttpClient Http
