--- a/Pages/History.razor
+++ b/Pages/History.razor
@@ -16,7 +16,16 @@
 }
 else if (userGames.Count() > 0)
 {
-    <table>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">Game Id</th>
+                <th scope="col">Created</th>
+                <th scope="col">State</th>
+                <th scope="col">Continue</th>
+            </tr>
+        </thead>
+        <tbody>
         @foreach (var game in userGames)
         {
             <tr>
@@ -26,6 +35,7 @@ else if (userGames.Count() > 0)
                 <td></td>
             </tr>
         }
+        </tbody>
     </table>
 }
 
