--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/newGame"
+﻿@page "/newGame/{GameId:int}"
 @using System.Net.Http.Json
 @using TamboliyaLibrary.DAL
 @using TamboliyaLibrary.Models
@@ -8,7 +8,7 @@
 @inject IAuthService AuthService
 
 @using Microsoft.AspNetCore.Authorization
-@attribute [Authorize(Roles ="User")]
+@attribute [Authorize(Roles = "User")]
 
 <div style="margin: auto;width: 990px; height:500px;background-image: url(@(pathToImage));" id="baseImage"></div>
 
@@ -88,7 +88,7 @@
 
 
 @code {
-    public int? GameId { get; set; }
+    [ParameterAttribute] public int? GameId { get; set; }
     private string messageForEndGame = String.Empty;
     public bool gameFinished = false;
     private string? question = null;
@@ -99,15 +99,20 @@
     private List<ActualPositionOnMap> ActualPositionsForSelect { get; set; } = new();
     public int SelectedIdForNextStepToEmbodiment { get; set; }
     private Chat? chat = new();
+    private bool _disposed = false;
 
     protected override async Task OnInitializedAsync()
     {
         var token = await AuthService.GetHttpClientToken();
         Http.DefaultRequestHeaders.Authorization = new AuthenticationHeaderValue("bearer", token);
+
+        if (GameId.HasValue && GameId > 0)
+        {
+            await GetInfoAboutExistGame();
+        }
+
         await base.OnInitializedAsync();
     }
-
-
 
     private async Task CreateNewGame()
     {
@@ -123,7 +128,7 @@
             {
                 Console.WriteLine(ex);
             }
-            
+
             GameId = gameOracle!.GameId;
             pathToImage = gameOracle!.PathToImage;
             RegionOnMap = gameOracle!.RegionOnMap;
@@ -135,6 +140,24 @@
                 await GetLog();
             }
         }
+    }
+
+    private async Task GetInfoAboutExistGame()
+    {
+        OracleDTO? gameOracle = null;
+        try
+        {
+            gameOracle = await Http.GetFromJsonAsync<OracleDTO>($"api/Game/info?gameId={GameId}");
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex);
+        }
+        pathToImage = gameOracle!.PathToImage;
+        RegionOnMap = gameOracle!.RegionOnMap;
+        PositionNumber = gameOracle!.StepOnPath;
+
+        await GetLog();
     }
 
 
@@ -256,7 +279,7 @@
         var response = await Http.PostAsJsonAsync<int>($"api/Game/finish", GameId!.Value);
         if (response.IsSuccessStatusCode)
         {
-            await chat!.SaveChatLog();
+            //await chat!.SaveBaseChatLog();
             var result = await response.Content.ReadFromJsonAsync<string>();
             messageForEndGame = result!;
             gameFinished = true;
